# ruly

./: Cargo.toml  README.md
examples/: fees.rs
src/: builder.rs  lib.rs  propagator.rs  property.rs  quantity.rs  rule.rs  table.rs  variant.rs
src/engine/: mod.rs  property.rs  rule.rs  table.rs  variant.rs
src/quantity/: date.rs  mod.rs  money.rs
